--- a/package.json
+++ b/package.json
@@ -39,8 +39,7 @@
   },
   "lint-staged": {
     "*.{js,ts,tsx}": [
-      "eslint --ignore-pattern '!.eslintrc.js' --fix",
-      "git add"
+      "eslint --ignore-pattern '!.eslintrc.js' --fix"
     ]
   }
 }
