--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,7 +8,7 @@
         "plugin:react/recommended", // Uses the recommended rules from @eslint-plugin-react
         "plugin:@typescript-eslint/recommended", // Uses the recommended rules
         "prettier/@typescript-eslint", // added prettier
-        "plugin:prettier/recommended",
+        "plugin:prettier/recommended"
     ],
     "globals": {
         "Atomics": "readonly",
@@ -31,6 +31,6 @@
         "@typescript-eslint/ban-ts-comment": "warn",
         "react/prop-types": "warn",
         "react/no-unescaped-entities": "warn",
-        "react/jsx-pascal-case": "off", // Prevents errors with Theme-UI and Styled component
+        "react/jsx-pascal-case": "off" // Prevents errors with Theme-UI and Styled component
     }
 }
