--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "9.4.4",
     "prop-types": "^15.7.2",
     "react": "16.13.1",
+    "react-calendar": "^3.1.0",
     "react-dom": "16.13.1",
     "sass": "^1.26.8"
   },
