Mitch app skeleton (#2)
* removed unused imports

* added Header, Subheader, Sidebar and Layout components"

* installed and setup calendar component

* moved calendar to subheader and put it in a dialog

* restyled daily component

--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
     "test:coverage": "jest --coverage"
   },
   "dependencies": {
+    "@material-ui/core": "^4.10.2",
+    "@material-ui/icons": "^4.9.1",
     "next": "9.4.4",
     "prop-types": "^15.7.2",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-calendar": "^3.1.0",
+    "react-dom": "16.13.1",
+    "sass": "^1.26.8"
   },
   "devDependencies": {
     "@types/jest": "^26.0.0",
