--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@material-ui/core": "^4.10.2",
     "@material-ui/icons": "^4.9.1",
+    "firebase": "^7.15.5",
     "next": "9.4.4",
     "prop-types": "^15.7.2",
     "react": "16.13.1",
@@ -23,6 +24,7 @@
     "sass": "^1.26.8"
   },
   "devDependencies": {
+    "@types/firebase": "^3.2.1",
     "@types/jest": "^26.0.0",
     "@types/node": "^14.0.13",
     "@types/react": "^16.9.36",
