--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@material-ui/core": "^4.10.2",
     "@material-ui/icons": "^4.9.1",
+    "date-fns": "^2.14.0",
     "firebase": "^7.15.5",
     "next": "9.4.4",
     "prop-types": "^15.7.2",
